--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   <body>
     <h1>Discover hiden places in the world around you</h1>
   <a href="#">Download Excursion (Coming soon!)</a>
+  <video src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Camp">
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="Phone">
+  <h2>Coming Soon for iPhone and Android</h2>
+  <a href="#">Download Excursion (Coming soon!)</a>
   </body>
 </html>
