--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
   </head>
   <body>
     <h1>Discover hiden places in the world around you</h1>
   <a href="#">Download Excursion (Coming soon!)</a>
-<p><video src="videofile.ogg" autoplay poster="posterimage.jpg"></video></p>
+<p><video src="resources/videos/excursion"></video></p>
     <h2>Your personal travel guide</h2>
     <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
-  <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Camp"></p>
-  <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="Phone"></p>
+  <p><img src="resources/images/camp.jpg" alt="Camp"></p>
+  <p><img src="resources/images/phone.png" alt="Phone"></p>
   <h2>Coming Soon for iPhone and Android</h2>
   <a href="#">Download Excursion (Coming soon!)</a>
   </body>
+  <footer>
+    <h3>(C) Excursion</h3>
+  </footer>
 </html>
