--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="resources/css/style.css">
   </head>
   <body>
-    <h1>Discover hiden places in the world around you</h1>
+    <h1>Discover hidden places in the world around you</h1>
   <a href="#">Download Excursion (Coming soon!)</a>
 <p><video src="resources/videos/excursion.mp4"></video></p>
     <h2>Your personal travel guide</h2>
@@ -17,6 +17,6 @@
   <a href="#">Download Excursion (Coming soon!)</a>
   </body>
   <footer>
-    <h3>(C) Excursion</h3>
+    <h3>Copr. Excursion</h3>
   </footer>
 </html>
