--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
   <a href="#">Download Excursion (Coming soon!)</a>
-<p><video src="resources/videos/excursion.mp4"></video></p>
+<p><video src="resources/vidoes/excursion.mp4">Video not supported</video></p>
     <h2>Your personal travel guide</h2>
     <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
   <p><img src="resources/images/camp.jpg" alt="Camp"></p>
@@ -17,6 +17,6 @@
   <a href="#">Download Excursion (Coming soon!)</a>
   </body>
   <footer>
-    <h3>Copr. Excursion</h3>
+    <h3>(C) Excursion</h3>
   </footer>
 </html>
